[package]
name = "mylang"
version = "0.1.0"
authors = ["Jonathan B Coe <jonathanbcoe@gmail.com>"]
edition = "2018"

[[bin]]
name = "mylang"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.41"
structopt = "0.3.21"
