[package]
name = "mylang"
version = "0.1.0"
authors = [
        "Jonathan B Coe <jonathanbcoe@gmail.com>",
        "Philip Craig <philip@pobox.com>",
        "Andrew Bennieston"]
edition = "2018"

[[bin]]
name = "mylang"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.41"
structopt = "0.3.21"
thiserror ="1.0.26"
lazy_static = "1.4.0"